[package]
name = "hole-punch"
description = "A WIP cross platform library for extracting information about holes in sparse files."
documentation = "https://docs.rs/hole-punch/0.0.0/hole_punch/"
repository = "https://gitlab.com/asuran-rs/hole-punch"
license = "MIT OR Apache-2.0"
version = "0.0.2-dev"
authors = ["Nathan McCarty <nathan@mccarty.io>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
thiserror = "1.0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2.67"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
tempfile = "3.1.0"
