[package]
name = "drill-press"
description = "A cross platform library for listing and manipulating holes in sparse files."
documentation = "https://docs.rs/drill-press/"
repository = "https://github.com/aj-bagwell/drill-press"
license = "MIT OR Apache-2.0"
edition = "2018"
version = "0.1.0"
authors = ["Nathan McCarty <nathan@mccarty.io>", "AJ Bagwell <aj.bagwell@gmail.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
memmap = "0.7.0"
thiserror = "1.0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2.67"
errno = "0.2.4"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["ioapiset", "winioctl"]}

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
tempfile = "3.1.0"
